# anonymsg

./: .env  .gitignore  Cargo.toml  gen-key.sh  openapi.yaml
anonymsg-client/: package-lock.json  package.json
anonymsg-client/src/: Domain.ts  Header.css  KeyEntry.css  KeyEntry.tsx  MessageSender.css
config/: local.template.yaml  production.template.yaml
migrations/: 20240830181250_create_tables.sql
scripts/: deploy.sh  gen-openapi.sh  init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: bytevec.rs  key.rs  mod.rs  n  namemap.rs
src/routes/: mod.rs  names.rs  register.rs  ui.rs
src/routes/api/: alias.rs  messages.rs  mod.rs  names.rs  publish.rs  register.rs
web/: index.html  openapitools.json  package-lock.json  package.json
web/src/: Api.ts  App.css  App.tsx  Header.tsx  KeyPair.ts  KeyPanel.css  MessageSender.tsx  api.ts  index.css
web/src/api/: runtime.ts
web/src/api/apis/: DefaultApi.ts
web/src/api/models/: GetMessages.ts  NameRequest.ts  PublishMessage.ts  RegisterRequest.ts  index.ts
web/src/components/: Header.tsx  KeyPanel.tsx  MessageBoard.css  MessageBoard.tsx
web/src/oapi/.openapi-generator/: FILES
web/src/oapi/apis/: DefaultApi.ts
web/src/oapi/models/: Message.ts  PublicJwk.ts  RegisterRequest.ts
